--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Monitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="stringExtensions.cs" />
     <Compile Include="TagScreen.cs" />
+    <Compile Include="Taskbar.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="WindowEventArgs.cs" />
     <Compile Include="Windows.cs" />
