--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Monitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rectangleExtensions.cs" />
     <Compile Include="stringExtensions.cs" />
     <Compile Include="TagScreen.cs" />
     <Compile Include="Taskbar.cs" />
