--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -61,9 +61,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="rectangleExtensions.cs" />
+    <Compile Include="ReversedDefaultLayout.cs" />
+    <Compile Include="SpiralLayout.cs" />
     <Compile Include="stringExtensions.cs" />
     <Compile Include="TagScreen.cs" />
     <Compile Include="Taskbar.cs" />
+    <Compile Include="VerticalDockLayout.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="WindowEventArgs.cs" />
     <Compile Include="Windows.cs" />
