--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="rectangleExtensions.cs" />
     <Compile Include="ReversedDefaultLayout.cs" />
+    <Compile Include="SingleWindowLayout.cs" />
     <Compile Include="SpiralLayout.cs" />
     <Compile Include="stringExtensions.cs" />
     <Compile Include="TagScreen.cs" />
