--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HumanReadableSettings">
-      <HintPath>..\..\HumanReadableSettings\HumanReadableSettings\bin\Release\HumanReadableSettings.dll</HintPath>
+      <HintPath>.\HumanReadableSettings.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
