--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -55,24 +55,17 @@
     <Compile Include="Bar.Designer.cs">
       <DependentUpon>Bar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Layouts\HalfSquaresLayout.cs" />
-    <Compile Include="Layouts\SquaresLayout.cs" />
-    <Compile Include="Layouts\DefaultLayout.cs" />
     <Compile Include="GlobalKeyboardHook.cs" />
     <Compile Include="HotkeyMessage.cs" />
-    <Compile Include="Layouts\Layout.cs" />
+    <Compile Include="Layout.cs" />
     <Compile Include="Manager.cs" />
     <Compile Include="Monitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="rectangleExtensions.cs" />
-    <Compile Include="Layouts\ReversedDefaultLayout.cs" />
-    <Compile Include="Layouts\SingleWindowLayout.cs" />
-    <Compile Include="Layouts\SpiralLayout.cs" />
     <Compile Include="stringExtensions.cs" />
     <Compile Include="TagScreen.cs" />
     <Compile Include="Taskbar.cs" />
-    <Compile Include="Layouts\VerticalDockLayout.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="WindowEventArgs.cs" />
     <Compile Include="WindowRules.cs" />
@@ -89,6 +82,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
