--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -74,6 +74,7 @@
     <Compile Include="windowExtensions.cs" />
     <Compile Include="WindowRules.cs" />
     <Compile Include="Windows.cs" />
+    <Compile Include="WindowStyleRules.cs" />
     <Compile Include="WindowSwitcher.cs">
       <SubType>Form</SubType>
     </Compile>
