--- a/TWiME/TWiME.csproj
+++ b/TWiME/TWiME.csproj
@@ -34,8 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HumanReadableSettings">
-      <HintPath>.\HumanReadableSettings.dll</HintPath>
+    <Reference Include="HumanReadableSettings, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>HumanReadableSettings.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
